# 49-crdm-scram-audit

./: CMakeLists.txt  README.md  generate_fatigue_test.py  generate_malformed_tests.py  generate_test_data.cpp  generate_test_data.py
include/: energy_analyzer.h  fatigue_analyzer.h  memory_mapped_file.h  raii_utils.h  stream_unpacker.h  wavelet_packet.h
malformed_tests/: batch_list.txt
reports/: batch_00_report.txt  batch_01_report.txt  batch_02_report.txt  batch_03_report.txt  batch_04_report.txt  batch_05_report.txt  batch_06_report.txt  batch_07_report.txt  batch_08_report.txt  batch_09_report.txt  batch_10_report.txt  batch_11_report.txt  batch_12_report.txt  batch_13_report.txt  batch_14_report.txt  test01_oversized_declare_report.txt  test02_truncated_report.txt  test03_bad_timestamps_report.txt  test04_bad_voltage_report.txt  test05_clean_report.txt
src/: energy_analyzer.cpp  fatigue_analyzer.cpp  main.cpp  memory_mapped_file.cpp  stream_unpacker.cpp  wavelet_packet.cpp
